--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
 	"type": "module",
 	"dependencies": {
 		"node-fetch": "^2.6.1"
+	},
+	"scripts": {
+		"search_in_table": "node code/search_in_table"
 	}
 }
